--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-.DS_STORE
+# Include your project-specific ignores in this file
+# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+# Useful .gitignore templates: https://github.com/github/gitignore
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# npm
+npm-debug.log
+node_modules/
+
+# other #
+######################
+.idea/
+
+# dist folder #
+dist/
