--- a/package.json
+++ b/package.json
@@ -7,45 +7,15 @@
     "doc": "doc"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
-    "core-js": "^3.11.0",
-    "focus-visible": "^5.2.0",
-    "regenerator-runtime": "^0.13.7"
+    "bootstrap": "^5.0.0-beta3"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/register": "^7.13.16",
-    "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "browserslist": "^4.16.5",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "fast-sass-loader": "^2.0.0",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.5.0",
-    "postcss-loader": "^5.2.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.35.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.0.0-beta.2",
-    "webpack-remove-empty-scripts": "^0.7.1"
+    "sass": "^1.32.11"
   },
   "scripts": {
-    "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development"
+    "css-compile": "sass --load-path=node_modules --style compressed --source-map --embed-sources --no-error-css src/css/:src/css/",
+    "watch": "nodemon -e scss -x \"npm run css-compile\""
   }
 }
