--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "doc": "doc"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3"
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
+    "pig.js": "github:schlosser/pig.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
