created models and migration related to photo, tag

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b626510ca6c7e3221dd1",
+    "/css/app.css": "/css/app.css?id=1fe8aa9c13d767b3ca6b"
 }
