--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
+        "resolve-url-loader": "^3.1.3",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.1.0",
         "tailwindcss": "^2.0.1",
         "vue": "^3.0.5",
-        "vue-loader": "^16.1.2"
+        "vue-loader": "^16.1.2",
+        "bootstrap": "^5.0.0-beta3",
+        "bootstrap-icons": "^1.4.1",
+        "pig.js": "github:schlosser/pig.js"
     }
 }
