Side-by-side image compare

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.1",
+    "img-comparison-slider": "^3.0.4",
     "pig.js": "github:schlosser/pig.js"
   },
   "devDependencies": {
