--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "doc": "doc"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta3",
-    "bootstrap-icons": "^1.4.1",
+    "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "img-comparison-slider": "^3.0.4",
     "pig.js": "github:schlosser/pig.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^8.1.1",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.11",
-    "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0"
+    "prettier": "^2.3.0",
+    "sass": "^1.32.13",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   },
   "scripts": {
     "css-compile": "sass --load-path=node_modules --style compressed --source-map --embed-sources --no-error-css src/css/:src/css/",
