aadded code related to file uploading details edit

--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
         "bootstrap": "^5.0.0-beta3",
         "bootstrap-icons": "^1.4.1",
         "pig.js": "github:schlosser/pig.js"
-    }
+    },
+    "dependencies": {}
 }
