--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
     "devDependencies": {
         "@inertiajs/inertia": "^0.8.4",
         "@inertiajs/inertia-vue3": "^0.3.5",
-        "@inertiajs/progress": "^0.2.4",
+        "@inertiajs/progress": "^0.2.5",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.0",
         "@vue/compiler-sfc": "^3.0.5",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.0.1",
+        "bootstrap-icons": "^1.4.1",
+        "img-comparison-slider": "^3.0.4",
+        "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "pig.js": "github:schlosser/pig.js",
+        "postcss": "^8.3.0",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.3",
-        "sass": "^1.32.13",
-        "sass-loader": "^11.1.0",
-        "tailwindcss": "^2.0.1",
+        "sass": "^1.34.1",
+        "sass-loader": "^11.1.1",
+        "tailwindcss": "^2.1.4",
         "vue": "^3.0.5",
-        "vue-loader": "^16.1.2",
-        "bootstrap": "^5.0.0-beta3",
-        "bootstrap-icons": "^1.4.1",
-        "pig.js": "github:schlosser/pig.js"
+        "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "npm": "^7.15.0"
+        "npm": "^7.16.0"
     }
 }
