--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
         "postcss": "^8.3.0",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.3",
-        "sass": "^1.34.1",
         "sass-loader": "^11.1.1",
         "tailwindcss": "^2.1.4",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "npm": "^7.16.0"
+        "npm": "^7.16.0",
+        "sass": "^1.34.1"
     }
 }
