--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,15 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.3.5",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/scout": "^8.0",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "tightenco/ziggy": "^1.0",
-        "lotuashvili/laravel-scout-elastic-aws": "*"
+        "lotuashvili/laravel-scout-elastic-aws": "*",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
