--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+PHOTO_SEARCH_API_ARN=abc
+ELASTICSEARCH_PROVIDER=elastic
+SCOUT_DRIVER=elasticsearch
+FULLSIZE_BUCKET=aalpphotos
+PREVIEW_BUCKET=aalpphotospreview
