updated .env example and updated process photo job

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="AALP Photos"
-APP_ENV=local
+APP_ENV=prod
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://gallery.aalpserver.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -16,7 +16,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
@@ -48,7 +48,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PHOTO_SEARCH_API_ARN=abc
+PHOTO_POST_UPLOAD_LAMBDA_ARN="arn:aws:lambda:us-east-1:728758055541:function:photo_post_upload"
 ELASTICSEARCH_PROVIDER=elastic
 SCOUT_DRIVER=elasticsearch
 FULLSIZE_BUCKET=aalpphotos
