--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,16 @@ services:
     volumes:
       - ./:/var/www
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./docker/supervisor/supervisord.conf:/etc/supervisor/supervisord.conf
     networks:
       - internet
+
+    # command:
+    #   - /bin/sh
+    #   - -c
+    # #   - supervisord -c /var/www/docker/supervisor/supervisord.conf
+    #   - php /var/www/artisan optimize
+    #   - supervisorctl start all
 
 
     # ports:
@@ -33,8 +41,8 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT}:80"
+      - "${HTTPS_PORT}:443"
     volumes:
       - ./:/var/www
       - ./docker/nginx_local:/etc/nginx/conf.d
