--- a/docker/supervisor/supervisord.conf
+++ b/docker/supervisor/supervisord.conf
@@ -7,7 +7,7 @@ logfile_maxbytes=5MB        ; max main logfile bytes b4 rotation; default 50MB
 logfile_backups=10           ; # of main logfile backups; 0 means none, default 10
 loglevel=info                ; log level; default info; others: debug,warn,trace
 pidfile=/tmp/supervisord.pid ; supervisord pidfile; default supervisord.pid
-nodaemon=false               ; start in foreground if true; default false
+nodaemon=true            ; start in foreground if true; default false
 minfds=1024                  ; min. avail startup file descriptors; default 1024
 minprocs=200                 ; min. avail process descriptors;default 200
 
@@ -27,5 +27,18 @@ killasgroup=true
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/www/storage/logs/worker.log
+stopwaitsecs=3600
+stdout_logfile_maxbytes=5MB
+
+[program:php-fpm]
+process_name=%(program_name)s_%(process_num)02d
+command=php-fpm
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/var/www/storage/logs/php_fpm.log
 stopwaitsecs=3600
 stdout_logfile_maxbytes=5MB
