--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "axios": "^0.21",
         "bootstrap": "^5.0.1",
         "bootstrap-icons": "^1.4.1",
-        "img-comparison-slider": "^3.0.4",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
         "pig.js": "github:schlosser/pig.js",
@@ -32,7 +31,9 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@img-comparison-slider/vue": "^7.1.1",
         "npm": "^7.17.0",
-        "sass": "^1.34.1"
+        "sass": "^1.34.1",
+        "vue-compare-image": "^0.2.0"
     }
 }
