--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
+        "development": "cross-env process.env.section=private NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env process.env.section=private NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "mix --production",
-        "public-prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=./webpack.config.js"
+        "production": "cross-env process.env.section=private NODE_ENV=production node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "public-dev": "npm run public-development",
+        "public-development": "cross-env process.env.section=public NODE_ENV=development node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "public-watch": "cross-env process.env.section=public NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress  --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "public-prod": "npm run public-production",
+        "public-production": "cross-env process.env.section=public NODE_ENV=production node_modules/webpack/bin/webpack.js --progress  --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "@inertiajs/inertia": "^0.8.4",
@@ -20,6 +22,7 @@
         "axios": "^0.21",
         "bootstrap": "^5.0.1",
         "bootstrap-icons": "^1.4.1",
+        "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
         "pig.js": "github:schlosser/pig.js",
