--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "pig.js": "github:schlosser/pig.js",
         "postcss": "^8.3.1",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.3",
@@ -35,9 +34,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "@img-comparison-slider/vue": "^7.1.1",
         "npm": "^7.17.0",
-        "sass": "^1.34.1",
-        "vue-compare-image": "^0.2.0"
+        "sass": "^1.34.1"
     }
 }
