--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "vue-loader": "^16.5.0"
     },
     "dependencies": {
+        "@sentry/tracing": "^6.13.2",
+        "@sentry/vue": "^6.13.2",
         "npm": "^7.22.0",
         "sass": "^1.34.1"
     }
