added various nginx config added bash script for generating lets encrypt ssl

--- a/docker/nginx/app.template.conf
+++ b/docker/nginx/app.template.conf
@@ -1,21 +1,22 @@
 server {
     listen 80;
-    server_name oto.repair;
-    return 301 oto.repair:443$request_uri;
+    server_name ${APP_URL);
+    return 301 https://$host$request_uri;
 }
 server {
 
-    listen 443 http2;
+    listen 443 ssl;
     index index.php index.html;
-    error_log  /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/public;
 
-    server_name oto.repair;
-    ssl on;
-    ssl_certificate /etc/ssl/certs/ssl.crt;
-    ssl_certificate_key /etc/ssl/private/ssl-private.key;
-    ssl_prefer_server_ciphers on;
+    server_name ${APP_URL);
+    ssl_certificate /etc/letsencrypt/live/${APP_URL)/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${APP_URL)/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
     location ~ \.php$ {
