--- a/docker/nginx/conf/app.template.conf
+++ b/docker/nginx/conf/app.template.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ${APP_URL);
+    server_name ${APP_URL};
     return 301 https://$host$request_uri;
 }
 server {
@@ -11,9 +11,9 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/public;
 
-    server_name ${APP_URL);
-    ssl_certificate /etc/letsencrypt/live/${APP_URL)/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${APP_URL)/privkey.pem;
+    server_name ${APP_URL};
+    ssl_certificate /etc/letsencrypt/live/${APP_URL}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${APP_URL}/privkey.pem;
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
