--- a/docker/nginx/conf/app.template.conf
+++ b/docker/nginx/conf/app.template.conf
@@ -1,7 +1,13 @@
 server {
     listen 80;
     server_name ${APP_URL};
-    return 301 https://$host$request_uri;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
 }
 server {
 
