--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,58 @@
 {
-    "name": "laravel/laravel",
+    "name": "aalp/gallery",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "AALP Photo Gallery",
+    "authors": [
+        {
+            "name": "Scotty Rippel",
+            "email": "scotty@uzly.com",
+            "homepage": "https://github.com/dyner",
+            "role": "Project Manager"
+        },
+        {
+            "name": "Ashraful Firoz",
+            "email": "ashraf.akon201@gmail.com",
+            "homepage": "https://github.com/ashrafakon",
+            "role": "Backend Developer"
+        },
+        {
+            "name": "Andrey Voltekin",
+            "email": "andreyvlktn@gmail.com",
+            "homepage": "https://github.com/andreyvolokitin",
+            "role": "Frontend Developer"
+        }
+    ],
     "keywords": [
-        "framework",
-        "laravel"
+        "All About Learning Press",
+        "gallery",
+        "aalp-gallery"
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
+        "ashrafakon/laravel-scout-elastic-aws": "*",
         "aws/aws-sdk-php": "^3.180",
         "elasticsearch/elasticsearch": "^7.13",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.3.5",
+        "inertiajs/inertia-laravel": "^0.5.4",
         "intervention/image": "^2.5",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.6",
-        "laravel/scout": "^8.0",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "ashrafakon/laravel-scout-elastic-aws": "*",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/dusk": "^6.18",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
